# vqvae-vae-learn

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  utils.py
conf/: config.yaml
models/: quantizer.py  vae.py
